adding first draft of FO plots

--- a/talk.tex
+++ b/talk.tex
@@ -210,13 +210,78 @@
   % \textcolor{red}{red}: incomplete contributions w.r.t.\ $M_h$
 \end{frame}
 
-% \begin{frame}{Uncertainty estimate of the fixed-order \DRbarp\ calculation}
-%   \begin{center}
-%     \includegraphics[width=0.49\textwidth]{{{plots/SOFTSUSY/SS_TB-20_Xt--sqrt6}}}\hfill
-%     \includegraphics[width=0.49\textwidth]{{{plots/SOFTSUSY/SS_TB-20_Xt--sqrt6_individual}}}
-%   \end{center}
-%   \mycite{1804.09410}
-% \end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\newcommand{\NUHMSSMNoFVHimalayaMSdata}{data/NUHMSSMNoFVHimalaya_MS-Mh-DMh_TB-20_xt--2.44949.dat}
+\newcommand{\NUHMSSMNoFVHimalayaXtdata}{data/NUHMSSMNoFVHimalaya_Xt-Mh-DMh_MS-3000_TB-20.dat}
+
+\begin{frame}{Uncertainty estimate of the fixed-order calculation}
+  \begin{center}
+    \begin{tikzpicture}
+      \begin{groupplot}[
+        group style={
+          group size=1 by 2,
+          vertical sep=0,
+        },
+        height={0.65\textheight},
+        width={0.7\textwidth},
+        xmode=log,
+        log basis x=10,
+        xmin=400, xmax=10000,
+        grid
+        ]
+        \nextgroupplot[
+          title={$\tan\beta=20$, $x_t=-\sqrt{6}$},
+          ymin=110, ymax=135,
+          ytick={115,120,125,130,135},
+          ylabel={$M_h$ / GeV},
+          xticklabels=\empty
+        ]
+        \addplot[red,thick] table[x index=0, y index=1] {\NUHMSSMNoFVHimalayaMSdata};
+        \addplot[name path=upper,draw=none] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\NUHMSSMNoFVHimalayaMSdata};
+        \addplot[name path=lower,draw=none] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\NUHMSSMNoFVHimalayaMSdata};
+        \addplot[red!30,fill opacity=0.5] fill between[of=upper and lower];
+        \nextgroupplot[height=3cm,ylabel={$\Delta M_h$ / GeV},xlabel={$\MS$ / GeV},ymin=0,ymax=4,ytick distance=1]
+        \addplot[red,thick] table[x index=0,y index=2] {\NUHMSSMNoFVHimalayaMSdata};
+      \end{groupplot}
+    \end{tikzpicture}
+  \end{center}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Uncertainty estimate of the fixed-order calculation}
+  \begin{center}
+    \begin{tikzpicture}
+      \begin{groupplot}[
+        group style={
+          group size=1 by 2,
+          vertical sep=0,
+        },
+        height={0.65\textheight},
+        width={0.7\textwidth},
+        xmin=-3.5, xmax=3.5,
+        grid
+        ]
+        \nextgroupplot[
+          title={$\MS=3$ TeV, $\tan\beta=20$},
+          ymin=105,
+          ymax=135,
+          ytick={110,115,120,125,130,135},
+          ylabel={$M_h$ / GeV},
+          xticklabels=\empty
+        ]
+        \addplot[red,thick] table[x index=0, y index=1] {\NUHMSSMNoFVHimalayaXtdata};
+        \addplot[name path=upper,draw=none] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\NUHMSSMNoFVHimalayaXtdata};
+        \addplot[name path=lower,draw=none] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\NUHMSSMNoFVHimalayaXtdata};
+        \addplot[red!30,fill opacity=0.5] fill between[of=upper and lower];
+        \nextgroupplot[height=3cm,ylabel={$\Delta M_h$ / GeV},xlabel={$x_t$ },ymin=0,ymax=3,ytick distance=1]
+        \addplot[red,thick] table[x index=0,y index=2] {\NUHMSSMNoFVHimalayaXtdata};
+      \end{groupplot}
+    \end{tikzpicture}
+
+  \end{center}
+\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
