--- a/talk.tex
+++ b/talk.tex
@@ -271,15 +271,15 @@
           ylabel={$M_h$ / GeV},
           xticklabels=\empty
         ]
-        \addplot[red,thick] table[x index=0, y index=1] {\NUHMSSMNoFVHimalayaXtdata};
-        \addplot[name path=upper,draw=none] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\NUHMSSMNoFVHimalayaXtdata};
-        \addplot[name path=lower,draw=none] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\NUHMSSMNoFVHimalayaXtdata};
+        \addplot[red,thick,restrict x to domain=-3.5:1] table[x index=0, y index=1] {\NUHMSSMNoFVHimalayaXtdata};
+        \addplot[red,thick,dashed,restrict x to domain=1:3.5] table[x index=0, y index=1] {\NUHMSSMNoFVHimalayaXtdata};
+        \addplot[name path=upper,draw=none,restrict x to domain=-3.5:1] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {\NUHMSSMNoFVHimalayaXtdata};
+        \addplot[name path=lower,draw=none,restrict x to domain=-3.5:1] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {\NUHMSSMNoFVHimalayaXtdata};
         \addplot[red!30,fill opacity=0.5] fill between[of=upper and lower];
         \nextgroupplot[height=3cm,ylabel={$\Delta M_h$ / GeV},xlabel={$x_t$ },ymin=0,ymax=3,ytick distance=1]
-        \addplot[red,thick] table[x index=0,y index=2] {\NUHMSSMNoFVHimalayaXtdata};
+        \addplot[red,thick,restrict x to domain=-3.5:1] table[x index=0,y index=2] {\NUHMSSMNoFVHimalayaXtdata};
       \end{groupplot}
     \end{tikzpicture}
-
   \end{center}
 \end{frame}
 
