adding sources of uncertainty

--- a/talk.tex
+++ b/talk.tex
@@ -102,8 +102,9 @@
 \newcommand{\DMhAlphaEm}{\ensuremath{\Delta M_h^{(\aem)}}}
 \newcommand{\DMhHSSUSY}{\ensuremath{\Delta M_h^{(\HSSUSY)}}}
 \newcommand{\DMhHSSUSYytSM}{\ensuremath{\Delta M_h^{(\hat{y}_t)}}}
-\newcommand{\DMhHSSUSYytMSSM}{\ensuremath{\Delta M_h^{(y_t^\MSSM)}}}
+\newcommand{\DMhgsMSSM}{\ensuremath{\Delta M_h^{(y_t)}}}
 \newcommand{\DMhEFT}{\ensuremath{\Delta M_h^{(v^2/\MS^2)}}}
+\newcommand{\DMhFO}{\ensuremath{\Delta M_h^{\text{(FO)}}}}
 \newcommand{\Mathematica}{\texttt{Mathematica}}
 \newcommand{\Loop}{\ensuremath{\ell}}
 \newcommand{\ord}{\ensuremath{\mathcal{O}}}
@@ -208,6 +209,20 @@
     \end{tabular}
   \end{center}
   % \textcolor{red}{red}: incomplete contributions w.r.t.\ $M_h$
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Uncertainty estimate of the EFT calculation}
+  Sources of uncertainty:
+  \begin{align*}
+    \DMhQpole &= \max_{\Qpole\in[M_t/2,2M_t]}\left|M_h(\Qpole) - M_h(M_t)\right| \\
+    \DMhgsMSSM &= \left| M_h(g_3^{1\Loop}(M_Z)) - M_h(g_3^{2\Loop}(M_Z)) \right|
+  \end{align*}
+  Combination:
+  \begin{equation*}
+    \DMhFO = \DMhQpole + \DMhgsMSSM
+  \end{equation*}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -342,12 +357,10 @@
     \DMhQmatch &= \max_{\Qmatch\in[\MS/2,2\MS]}\left|M_h(\Qmatch) - M_h(\MS)\right| & \text{\mycite{1407.4081}} \\
     \DMhHSSUSYytSM &= \left| M_h(\hat{y}_t^{3\Loop}(M_Z)) - M_h(\hat{y}_t^{4\Loop}(M_Z)) \right| & \text{\mycite{1504.05200}} \\
     \DMhEFT &= \left| M_h - M_h(v^2/\MS^2) \right| & \text{\mycite{1504.05200}} % \\
-    % \DMhHSSUSYytMSSM &= \left| M_h - M_h(y_t^\MSSM(\MS)) \right| & \text{\mycite{Bagnaschi,AV,Weiglein}}
   \end{align*}
   Combination:
   \begin{equation*}
-    \DMhHSSUSY = \DMhQpole + \DMhQmatch + \DMhHSSUSYytSM % + \DMhHSSUSYytMSSM \\
-    + \DMhEFT
+    \DMhHSSUSY = \DMhQpole + \DMhQmatch + \DMhHSSUSYytSM + \DMhEFT
   \end{equation*}
 \end{frame}
 
