remove unused slides

--- a/talk.tex
+++ b/talk.tex
@@ -102,7 +102,7 @@
 \newcommand{\DMhAlphaEm}{\ensuremath{\Delta M_h^{(\aem)}}}
 \newcommand{\DMhHSSUSY}{\ensuremath{\Delta M_h^{(\HSSUSY)}}}
 \newcommand{\DMhHSSUSYytSM}{\ensuremath{\Delta M_h^{(\hat{y}_t)}}}
-\newcommand{\DMhgsMSSM}{\ensuremath{\Delta M_h^{(y_t)}}}
+\newcommand{\DMhgsMSSM}{\ensuremath{\Delta M_h^{(g_3)}}}
 \newcommand{\DMhEFT}{\ensuremath{\Delta M_h^{(v^2/\MS^2)}}}
 \newcommand{\DMhFO}{\ensuremath{\Delta M_h^{\text{(FO)}}}}
 \newcommand{\Mathematica}{\texttt{Mathematica}}
@@ -444,431 +444,5 @@
 \begin{frame}{Contents}
   \tableofcontents[currentsection,currentsubsection]
 \end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}{Comparison of fixed-order and EFT calculation}
-%   \begin{center}
-%     \includegraphics[width=0.49\textwidth]{plots/SOFTSUSY/Mh_MS_TB-20_Xt--sqrt6}\hfill
-%     \includegraphics[width=0.49\textwidth]{plots/SOFTSUSY/HSSUSY_TB-20_Xt--sqrt6_individual}
-%   \end{center}
-%   \begin{center}
-%     $\DMhFO \overset{!}{=} \DMhEFT$\\[0.5em]
-%     $\Rightarrow$ $\MS^{\text{equal}} \sim 1\TeV$ for
-%     small/large $\tan\beta$ and/or $X_t$
-%   \end{center}
-%   \mycite{1804.09410}
-% \end{frame}
-
-% \begin{frame}{Summary of fixed-order and EFT approaches}
-%   \begin{center}
-%     \begin{tabular}{lcc}
-%       \toprule
-%                   & low $\MS$ & high $\MS$ \\
-%                   & $\MS \lesssim 1\eh{TeV}$ & $\MS \gtrsim 1\eh{TeV}$ \\
-%       \midrule
-%       fixed-order & \ok       & \notok     \\
-%       EFT         & \notok    & \ok        \\
-%       ? hybrid    & \ok       & \ok        \\
-%       \bottomrule
-%     \end{tabular}
-%   \end{center}
-%   \vspace{2em}
-%   Q: Can the fixed-order and EFT approaches be combined? \\[1em]
-%   A: Yes!  \mycite{1312.4937, 1609.00371, 1710.03760, 1910.03595, 2003.04639}
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \subsection{Hybrid}
-
-% \begin{frame}{Contents}
-%   \tableofcontents[currentsection,currentsubsection]  
-% \end{frame}
-
-% \begin{frame}{Hybrid calculation -- FeynHiggs approach}
-%   \emph{Goal:} resum large logarithms \emph{and} include suppressed
-%   $\ord(v^2/\MS^2)$ terms
-%   \\[2em]
-%   \emph{Idea I:} (``FeynHiggs approach'' \mycite{1312.4937, 1706.00346, 1805.00867, 1910.03595})\\
-%   Replace logs from fixed-order calculation by resummed logs:
-%   \begin{align*}
-%     M_h^2 = (M_h^2)_{\text{fixed-order}} - (M_h^2)_{\text{logs}} + (M_h^2)_{\text{resummed logs}}
-%   \end{align*}
-%   \emph{Advantages:}
-%   \begin{itemize}
-%   \item[\ok] approach applicable to any BSM model
-%   \item[\ok] any EFT can be used
-%   \end{itemize}
-%   \emph{Disadvantages:}
-%   \begin{itemize}
-%   \item[\notok] requires knowledge of fixed-order and EFT expressions
-%   \item[\notok] care must be taken to avoid double counting
-%   \end{itemize}
-% \end{frame}
-
-% \begin{frame}{FeynHiggs approach in FlexibleSUSY at 3-loop}
-%   \begin{center}
-%     \includegraphics[width=0.49\textwidth]{plots/Mh3l-match-really/scan_Mh_MS_TB-20_Xt--sqrt6_mixed_3L}\hfill
-%     \includegraphics[width=0.49\textwidth]{plots/Mh3l-match-really/scan_Mh_MS_TB-20_Xt--sqrt6_mixed_3L_diff}
-%   \end{center}
-%   \mycite{1910.03595}
-% \end{frame}
-
-% \begin{frame}{Hybrid calculation -- FlexibleEFTHiggs}
-%   % \emph{Goal:} resum large logarithms \emph{and} include suppressed
-%   % $\ord(v^2/\MS^2)$ terms
-%   % \\[2em]
-%   \emph{Idea II:} (``FlexibleEFTHiggs'' \mycite{1609.00371,
-%     1710.03760, 2003.04639})\\
-%   Incorporate all $\ord((v^2/\MS^2)^\infty)$ terms into $\lambda$ by
-%   using the matching condition for the FO calculations:
-%   \begin{align*}
-%     (M_h^2)_{\SM} &\overset{!}{=} (M_h^2)_{\BSM} \qquad \text{at } Q = \MS \\
-%     \lambda(\MS) v^2 + (\Delta m_h^2)_{\SM} &= (M_h^2)_{\BSM}
-%   \end{align*}
-%   $\Rightarrow$
-%   \begin{align*}
-%     \lambda(\MS) = \frac{1}{v^2}\left[(M_h^2)_{\BSM} - (\Delta m_h^2)_{\SM}\right]
-%   \end{align*}
-%   Continue as in the EFT calculation \ldots
-%   % \emph{Pro:}
-%   % \begin{itemize}
-%   % \item[\ok] approach applicable to any BSM model
-%   %   % easy to apply to any SM extensison
-%   % \item[\ok] easy to automate
-%   %   (only fixed-order expressions required)
-%   % \end{itemize}
-%   % \emph{Contra:}
-%   % \begin{itemize}
-%   % \item[\notok] difficult to extend to other EFTs beyond the SM (2HDM,
-%   %   \ldots)
-%   % \item[\meh] tricky to reach 2-loop accuracy\\
-%   %   (requires careful treatment of parameter matching)
-%   % \end{itemize}
-% \end{frame}
-
-% \begin{frame}{Hybrid calculation -- FlexibleEFTHiggs}
-%   Continue as in the EFT calculation:
-%   \begin{center}
-%     \begin{tikzpicture}[scale=0.9]
-%       \draw[->, thick] (0,0) -- (0,1) node[left]{$M_t$} -- (0,5) node[left]{$\MS$} -- (0,6);
-%       \draw[thick] (1,0)   rectangle node{SM(5)} (4,0.9);
-%       \draw[thick] (1,1.1) rectangle node{SM}    (4,4.9);
-%       \draw[thick] (1,5.1) rectangle node{BSM}  (4,6);
-%       \draw[<-, thick, darkgreen] (4.1,5) -- (4.5,5) node[right]{$\lambda(\MS) = \frac{1}{v^2}\left[(M_h^2)_{\BSM} - (\Delta m_h^2)_{\SM}\right]$};
-%       \draw[<-, thick, red] (4.1,1) -- (4.5,1) node[right]{$(M_h^\SM)^2 = \lambda(M_t) v^2 + (\Delta m_h^2)_{\SM} + \cdots$};
-%       \draw[<->, thick, blue] (4.2,1.2) -- node[right]{RG running} (4.2,4.8);
-%     \end{tikzpicture}
-%   \end{center}
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}{Proof: FlexibleEFTHiggs $\rightarrow$ EFT for $v^2 \ll M_S^2$}
-%   Consider the matching condition:
-%   \begin{align*}
-%     \lambda(\MS) = \frac{1}{v^2}\left[(M_h^2)_{\MSSM} - (\Delta m_h^2)_{\SM}\right]
-%   \end{align*}
-%   where at $\ord(y_t^4)$:
-%   \begin{align*}
-%     (\Delta m_h^2)_{\SM} ={}& - {\color{red}\Sigma^{\SM}_h} - {\color{red}6\kappa y_t^2 A_0(m_t)}\\
-%     (M_h^2)_{\MSSM} ={}& m_Z^2 c^2_{2\alpha} + \Big[ - {\color{red}\Sigma_h^\SM}
-%       - {\color{red} 6 \kappa y_t^2 A_0(m_t)} \Big] \; \frac{c^2_\alpha}{s^2_\beta} \\
-%     &- 6 \kappa y_t^4 v^2 \frac{c^2_\alpha}{s^2_\beta} B_0(\MS,\MS)
-%   \end{align*}
-% \end{frame}
-
-% \begin{frame}{Proof: FlexibleEFTHiggs $\rightarrow$ EFT for $v^2 \ll M_S^2$}
-%   \begin{align*}
-%     \lambda(\MS) ={}& \frac{1}{v^2}\left[(M_h^2)_{\MSSM} - (\Delta m_h^2)_{\SM}\right] \\
-%     ={}& \frac{m_Z^2}{v^2} c^2_{2\alpha}
-%     + \frac{1}{v^2} \Big[ - {\color{red}\Sigma_h^\SM}
-%     - {\color{red} 6 \kappa y_t^2 A_0(m_t)} \Big] \; \Big(\frac{c^2_\alpha}{s^2_\beta} - 1 \Big) \\
-%     &- 6 \kappa y_t^4 \frac{c^2_\alpha}{s^2_\beta} B_0(\MS,\MS)
-%   \end{align*}
-%   In the limit $v^2 \ll M_S^2$: $c_\alpha^2 \to s_\beta^2$, $c_{2\alpha}^2 \rightarrow c_{2\beta}^2$
-%   $\Rightarrow$
-%   \begin{align*}
-%     \lambda(\MS) ={}& \frac{1}{4} (g_Y^2 + g_2^2) c_{2\beta}^2
-%     - 6 \kappa y_t^4 B_0(\MS,\MS) \\
-%     ={}& \frac{1}{4} (g_Y^2 + g_2^2) c_{2\beta}^2
-%     - 6 \kappa y_t^4 \Big[
-%     - \log\frac{\MS^2}{Q^2} + \textcolor{blue}{\frac{p^2}{6 \MS^2} + \ord\Big(\frac{p^4}{\MS^4}\Big)} \Big]
-%   \end{align*}
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}{Summary of FlexibleEFTHiggs hybrid calculation}
-%   Matching condition:
-%   \begin{align*}
-%     (M_h^2)_{\SM} &\overset{!}{=} (M_h^2)_{\BSM}
-%   \end{align*}
-%   \emph{Advantages:}
-%   \begin{itemize}
-%   \item[\ok] includes all power-suppressed terms at $n$-loop order
-%     $(v^2/\MS^2)^\infty [c + \log^n(\MS/Q) + \log^n(\MS/m_t)]$
-%   \item[\ok] resumms large non-suppressed logarithms $c \log^\infty(\MS/m_t)$
-%   \item[\ok] approach applicable to any BSM model
-%     % easy to apply to any SM extensison
-%   \item[\ok] only 1- and 2-point fixed-order expressions required
-%    $\rightarrow$ easy to automate (e.g.\ SARAH/FlexibleSUSY)
-%   \end{itemize}
-%   \emph{Disadvantages:}
-%   \begin{itemize}
-%   \item[\notok] difficult to extend to other EFTs beyond the SM (2HDM,
-%     \ldots)
-%   \item[\meh] tricky to reach 2-loop accuracy\\
-%     (requires careful treatment of parameter matching)
-%   \end{itemize}
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}{Interpolation behaviour of FlexibleEFTHiggs in the MSSM}
-%   Interpolation behaviour between FO and EFT calculation:
-%   \begin{center}
-%     \includegraphics[width=0.49\textwidth]{{{plots/FlexibleEFTHiggs-2L/Mh_MS_TB-20_Xt-0}}}\hfill
-%     \includegraphics[width=0.49\textwidth]{{{plots/FlexibleEFTHiggs-2L/Mh_MS_TB-20_Xt--sqrt6}}}
-%   \end{center}
-%   \begin{raggedright}
-%     \mycite{plots along the lines of 2003.04639}
-%   \end{raggedright}
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}{Hybrid calculation -- FlexibleEFTHiggs}
-%   \begin{center}
-%     \includegraphics[width=0.49\textwidth]{{{plots/FlexibleEFTHiggs-3L/uncer_2panel_ms_scan_xt-sqrt6_tb20}}}\hfill
-%     \includegraphics[width=0.49\textwidth]{{{plots/FlexibleEFTHiggs-3L/uncer_2panel_xt_scan_ms3_tb20}}}
-%   \end{center}
-%   \begin{raggedright}
-%     \mycite{2003.04639}
-%   \end{raggedright}\\[1em]
-%   Theory uncertainty $\DMh \lesssim 1\GeV$ in relevant degenerate SUSY scenarios.
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \section{$x_t$ resummation}
-% \begin{frame}{Contents}
-%   \tableofcontents[currentsection,currentsubsection]  
-% \end{frame}
-
-% \begin{frame}{Further improvements: $x_t$ resummation}
-%   Large stop mixing, $x_t \equiv X_t/\MS \approx \pm \sqrt{6}$, is an
-%   attractive scenario for low-scale supersymmetry.
-%   \\[1em]
-%   However: ``With large stop mixing comes large uncertainty.''\\
-%   --- P.\ Slavich
-%   \begin{center}
-%     \includegraphics[width=0.49\textwidth]{{{plots/FlexibleEFTHiggs-1L/xt_MSSM_MS-2000}}}\hfill
-%     \includegraphics[width=0.49\textwidth]{{{plots/1912.04199/var_XtDR}}}
-%   \end{center}
-%   \begin{raggedright}
-%     \mycite{1609.00371, 1912.10002}
-%   \end{raggedright}
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}{Recap: $\tan\beta$ resummation in $m_b$}
-%   Relation between running $m_b$ in the MSSM and $m_b^{\EFT}$ in the EFT:
-%   \begin{align*}
-%     m_b^{\EFT} = m_b (1 + \Delta m_b)
-%   \end{align*}
-%   where $\Delta m_b$ is expressed in terms of MSSM parameters.\\[1em]
-%   \begin{theorem}[hep-ph/9912516]
-%     There are no contributions to $\Delta m_b$ of
-%     $\ord((\as\tan\beta)^n)$ for $n\ge 2$.
-%   \end{theorem}
-%   \vspace*{1em}
-%   $\Rightarrow$ All higher-order MSSM contributions in $m_b$ of
-%   $\ord((\as\tan\beta)^n)$ can be resummed by writing:
-%   \begin{align*}
-%     m_b = \frac{m_b^{\EFT}}{1 + \Delta m_b}
-%     = m_b^{\EFT} \sum_{n=0}^\infty (-\Delta m_b)^n
-%   \end{align*}
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}{$x_t$ resummation}
-%   Relation between running $y_t$ in the MSSM and $y_t^{\EFT}$ in the EFT:
-%   \begin{align*}
-%     y_t^{\EFT} = y_t s_\beta + \Delta y_t
-%   \end{align*}
-%   where $\Delta y_t$ is expressed in terms of MSSM parameters.\\[1em]
-%   \begin{theorem}[Kwasnitza, Stöckinger (2003.04639)]
-%     There are no unsuppressed contributions to $\Delta y_t$
-%     of $\ord(\as^n x_t^{>1})$ for $n\ge 1$.
-%   \end{theorem}
-%   \vspace*{1em}
-%   $\Rightarrow$ All higher-order MSSM contributions in $y_t$ of
-%   $\ord(\as^n x_t^{>1})$ can be resummed by writing:
-%   \begin{align*}
-%     y_t = \frac{y_t^{\EFT}}{1 + \Delta y_t/(y_ts_\beta)}
-%   \end{align*}
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% % \begin{frame}{$x_t$ resummation}
-% %   $\Rightarrow$ by expressing $M_h$ in terms of \emph{MSSM parameters}
-% %   ($y_t$, $m_b$, \ldots), certain higher-order contributions can be
-% %   resummed to all orders.
-% %   \begin{center}
-% %     \includegraphics[width=0.49\textwidth]{{{plots/FlexibleEFTHiggs-3L/plot_xt_MS_3_tb20_compare_hybrids}}}\hfill
-% %     \includegraphics[width=0.49\textwidth]{{{plots/FlexibleEFTHiggs-3L/plot_xt_MS_3_tb20_compare_hybrids_diff}}}
-% %   \end{center}
-% %   \mycite{2003.04639}
-% % \end{frame}
-
-% \begin{frame}{$x_t$ resummation}
-%   $\Rightarrow$ by expressing $\lambda(\MS)$ in terms of \emph{MSSM parameters}
-%   ($y_t$, $m_b$, \ldots), certain higher-order contributions can be
-%   resummed to all orders
-%   \begin{center}
-%     \includegraphics[width=0.49\textwidth]{{{plots/FlexibleEFTHiggs-3L/plot_MS_xt_sqrt6_tb20_compare_hybrids}}}\hfill
-%     \includegraphics[width=0.49\textwidth]{{{plots/FlexibleEFTHiggs-3L/plot_MS_xt_sqrt6_tb20_compare_hybrids_diff}}}
-%   \end{center}
-%   \mycite{2003.04639}
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \section{Summary and conclusions}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}{Summary and Conclusions}
-%   \emph{Precise prediction of the Higgs boson mass} in supersymmetric
-%   models allows to constrain the model parameter space
-%   \\[1em]
-%   \emph{Effective field theory} and resummation methods necessary for
-%   a precise prediction (resummation of large logarithms and
-%   $x_t^\infty$ corrections)
-%   \\[1em]
-%   $\Rightarrow$
-%   \\[1em]
-%   \emph{Current precision} in the MSSM in relevant parameter space:
-%   $\DMh \lesssim 1\GeV$
-%   \\[1em]
-%   \emph{Stop quarks must be heavy}, $\MS \gtrsim 2\TeV$, in the MSSM
-%   for correct prediction of $M_h \approx 125\GeV$
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}{Outlook}
-%   \begin{minipage}[t][1.5cm][t]{\textwidth}
-%     \begin{center}
-%       \only<1>{\LARGE Large zoo of SUSY models\\ $\Rightarrow$ automation important!}
-%       \only<2>{\LARGE Thank you for your attention!}
-%     \end{center}
-%   \end{minipage}
-%   \begin{center}
-%     \includegraphics[width=0.9\textwidth]{images/FS.png}
-%   \end{center}
-%   \tikz[overlay,remember picture] 
-%   \node[at=(current page.north east),anchor=north east,inner sep=0pt, xshift=-1.5cm, yshift=-4cm] (FS) {
-%     \textbf{FlexibleSUSY}};
-%   \tikz[overlay,remember picture] 
-%   \draw[-latex,thick] ([yshift=-0.2cm] FS.south) to[out=270,in=0] ++(-2cm,-1cm);
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% % backup slides
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}[noframenumbering]
-%   \begin{center}
-%     \Huge Backup
-%   \end{center}
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}[noframenumbering]{Status of Higgs mass calculations}
-%   \begin{center}
-%   \begin{tabular}{lccc}
-%     \toprule
-%                  & FO & EFT & hybrid \\
-%     \midrule
-%     \multicolumn{1}{c}{MSSM} \\
-%     \midrule
-%     FeynHiggs    & 2L & 2L  & 2L \\
-%     FlexibleSUSY & 3L & 3L  & 3L$^\ddagger$ \\
-%     SARAH        & 2L & 2L  & 2L$^*$ \\
-%     SOFTSUSY     & 3L & --  & -- \\
-%     SPheno       & 2L & --  & 2L$^*$ \\
-%     \midrule
-%     \multicolumn{1}{c}{generic} \\
-%     \midrule
-%     FlexibleSUSY & 1L & --  & 1L$^\dagger$ \\
-%     SARAH/SPheno & 2L & 1L  & 2L$^*$ \\
-%     \bottomrule
-%   \end{tabular}
-%   \end{center}
-%   $^\ddagger$: in preparation, including $x_t$ resummation \\
-%   $^*$: NNLO + LL resummation \\
-%   $^\dagger$: NLO + NLL resummation
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}[noframenumbering]{Maximum stop masses in the MSSM}
-%   Maximum stop mass scenario with $\tan\beta = 1$:
-%   \begin{center}
-%     \includegraphics[width=0.5\textwidth]{plots/DMh/TB-1}
-%   \end{center}
-%   Dark region: charge and color breaking minima\\
-%   Hatched region: unbounded Higgs potential, $\lambda(\MS) < 0$
-% \end{frame}
-
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \begin{frame}[noframenumbering]{Scenarios with 1 light Higgs doublet}
-%   \begin{center}
-%     \begin{tikzpicture}[scale=0.8, every node/.style={transform shape}]
-%       \draw[->, thick] (0,0) -- (0,1) node[left]{$M_t$} -- (0,4) node[left]{$\MS$} -- (0,6);
-%       \node at (2.5,7) {\emph{I high-scale SUSY}};
-%       \draw[thick] (1,0)   rectangle node{SM}    (4,0.9);
-%       \draw[thick] (1,1.1) rectangle node{SM}   (4,4.9);
-%       \draw[thick] (1,5.1) rectangle node{MSSM}  (4,6);
-%       % 
-%       \node at (6.5,7) {\emph{II split-SUSY}};
-%       \draw[thick] (5,0)   rectangle node{SM}    (8,1.9);
-%       \draw[thick] (5,2.1) rectangle node{SM + $\chi_i$ + $\tilde{g}$} (8,4.9);
-%       \draw[thick] (5,5.1) rectangle node{MSSM}  (8,6);
-%     \end{tikzpicture}
-%   \end{center}
-% \end{frame}
-
-% \begin{frame}[noframenumbering]{Scenarios with 2 light/intermediate Higgs doublets}
-%   \begin{center}
-%     \begin{tikzpicture}[scale=0.8, every node/.style={transform shape}]
-%       \draw[->, thick] (0,0) -- (0,1) node[left]{$M_t$} -- (0,4) node[left]{$\MS$} -- (0,6);
-%       \node[align=center] at (2.5,7) {\emph{III 2HDM}\\ (light $h_i$, $A$, $H^{\pm}$)};
-%       \draw[thick] (1,0)   rectangle node{SM} (4,0.9);
-%       \draw[thick] (1,1.1) rectangle node{2HDM} (4,4.9);
-%       \draw[thick] (1,5.1) rectangle node{MSSM} (4,6);
-%       % 
-%       \node[align=center] at (6.5,7) {\emph{IV 2HDM+split}\\ (light $h_i$, $A$, $H^{\pm}$,\\ intermediate $\chi_i$, $\tilde{g}$)};
-%       \draw[thick] (5,0)   rectangle node{SM} (8,0.9);
-%       \draw[thick] (5,1.1) rectangle node{2HDM} (8,2.9);
-%       \draw[thick] (5,3.1) rectangle node[align=center]{2HDM\\ + $\chi_i$ + $\tilde{g}$} (8,4.9);
-%       \draw[thick] (5,5.1) rectangle node{MSSM} (8,6);
-%       % 
-%       \node[align=center] at (10.5,7) {\emph{V 2HDM+split}\\ (light $\chi_i$, $\tilde{g}$, inter-\\ mediate $h_2$, $A$, $H^{\pm}$)};
-%       \draw[thick] (9,0)   rectangle node{SM} (12,0.9);
-%       \draw[thick] (9,1.1) rectangle node{SM + $\chi_i$ + $\tilde{g}$} (12,2.9);
-%       \draw[thick] (9,3.1) rectangle node[align=center]{2HDM\\ + $\chi_i$ + $\tilde{g}$} (12,4.9);
-%       \draw[thick] (9,5.1) rectangle node{MSSM} (12,6);
-%     \end{tikzpicture}
-%   \end{center}
-% \end{frame}
 
 \end{document}
